CustomObjects/objects/blng__DebitNote__c.object
<CustomObject>
    <fields>
        <fullName>blng__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debit Notes</relationshipLabel>
        <relationshipName>DebitNotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Allocations__c</fullName>
        <label>Allocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Allocations__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__AvailableBalance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Allocations__c + blng__Unallocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteDate__c</fullName>
        <label>Debit Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__PaymentBalance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Payments__c + blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Payments1__c</fullName>
        <formula>blng__Payments__c -  blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Payments__c</fullName>
        <label>Payment Allocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Payments__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Refunds__c</fullName>
        <label>Payment Unallocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Refunds__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Subtotal__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <label>Tax</label>
        <summarizedField>blng__DebitNoteLine__c.blng__TaxAmount__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <label>Total Amount (With Tax)</label>
        <summarizedField>blng__DebitNoteLine__c.blng__TotalAmount__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Unallocations__c</fullName>
        <label>Unallocations</label>
        <summarizedField>blng__DebitNoteLine__c.blng__Unallocations__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteLine__c.blng__DebitNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Debit Note</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__DebitNoteDate__c</columns>
        <columns>blng__TotalAmount__c</columns>
        <columns>blng__Allocations__c</columns>
        <columns>blng__Unallocations__c</columns>
        <columns>blng__AvailableBalance__c</columns>
        <columns>blng__PaymentBalance__c</columns>
        <columns>blng__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>Debit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>